--- a/04webpack/package.json
+++ b/04webpack/package.json
@@ -62,6 +62,8 @@
     "extends": "airbnb-base"
   },
   "dependencies": {
-    "babel-runtime": "^6.26.0"
+    "axios": "^0.26.1",
+    "babel-runtime": "^6.26.0",
+    "jquery": "^3.6.0"
   }
 }
